Harden frontier combiner deterministic fleet semantics